--- a/login.html
+++ b/login.html
@@ -30,6 +30,9 @@
 
 
     <style>
+      .form-floating{
+        margin: 2rem;
+      }
       .bd-placeholder-img {
         font-size: 1.125rem;
         text-anchor: middle;
@@ -86,10 +89,10 @@
     <!-- Custom styles for this template -->
     <link href="signin.css" rel="stylesheet">
   </head>
-  <body class="text-center">
+  <body class="text-center container">
     
 <main class="form-signin w-100 m-auto">
-  <form>
+  <form class="mt-5">
     <img class="mb-4" src="./images/keyboard-key-k.png" alt="" width="72" height="57">
     <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
